--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,9 @@
 @import "../bourbon/bourbon";
 @import "normalize";
 
+@import "font-awesome";
+@import "font-awesome-compass";
+
 /* Global variables */
 $anim: 0.25s;
 $primary: #eb1d1d;
@@ -218,11 +221,22 @@ body {
             display: inline-block;
             width: 33%;
             vertical-align: top;
+            font-size: 14px;
+            line-height: 1.8;
             ul {
                 list-style: none;
                 -webkit-margin-before: 0;
                 -webkit-margin-after: 0;
                 -webkit-padding-start: 0;
+                margin-left: 20px;
+                margin-top: 10px;
+                a {
+                    opacity: 1;
+                    @include transition( opacity $anim );
+                    &:hover {
+                        opacity: 0.5;
+                    }
+                }
             }
         }
     }
