Beginning of Events page

--- a/css/style.scss
+++ b/css/style.scss
@@ -308,6 +308,15 @@ p {
     }
 }
 
+/* Events page */
+#rss {
+    item {
+        title {
+            display: block;
+        }
+    }
+}
+
 /* Footer */
 #footer {
     text-align: center;
