--- a/css/style.scss
+++ b/css/style.scss
@@ -310,9 +310,68 @@ p {
 
 /* Events page */
 #rss {
-    item {
-        title {
-            display: block;
+    padding: $padding 0;
+    min-height: 300px;
+    .item {
+        padding: $padding;
+        padding-bottom: 0;
+        &:last-child {
+            padding-bottom: $padding;
+        }
+        border: 1px solid #efefef;
+        border-radius: 8px;
+        h3, h4, h5 {
+            cursor: pointer;
+        }
+        .date-info {
+            display: inline-block;
+            vertical-align: top;
+            width: 20%;
+            text-align: center;
+            .date-day {
+                width: 20vw;
+                max-width: 160px;
+                height: 20vw;
+                max-height: 160px;
+                margin: 0 auto;
+                background: $primary;
+                border-radius: 4px;
+                h4, h5 {
+                    font-family: 'Segoe UI Bold', sans-serif;
+                    color: #fff;
+                    line-height: 1;
+                }
+                h4 {
+                    font-size: 24px;
+                }
+                h5 {
+                    font-size: 72px;
+                }
+            }
+            span {
+                width: 100%;
+                display: block;
+                font-weight: bold;
+                padding-top: 1em;
+                &:last-child {
+                    padding-top: 0.5em;
+                    color: #6e6e6e;
+                }
+            }
+        }
+        .event-info {
+            display: inline-block;
+            vertical-align: top;
+            width: 75%;
+            margin-left: 4%;
+            h3 {
+                font-family: 'Segoe UI Bold', sans-serif;
+            }
+            p {
+                color: #4d4d4d;
+                padding-top: $padding / 2;
+                font-size: 20px;
+            }
         }
     }
 }
