Add basic content

--- a/src/views/partials/meta-head.jade
+++ b/src/views/partials/meta-head.jade
@@ -2,3 +2,4 @@ doctype html
 html(lang="en")
   head
     title Northeastern Virtual Reality
+    link(rel='stylesheet', type='text/css', href='styles/main.css')
