--- a/src/views/partials/header.jade
+++ b/src/views/partials/header.jade
@@ -1,4 +1,28 @@
 body
-  h1 Jade - node template engine
+  #header
+    h1 Northeastern Virtual Reality
+    h4 Whether you're a developer, a designer, or just an individual looking to try out VR for the first time, we welcome everyone. Come visit us in the Discovery Lab or join our mailing list below.
+
+    a(href="#")
+      button.btn.btn-large.btn-white
+        | Join Mailing List
+    a(href="#")
+      button.btn.btn-large.btn-white.btn-outline
+        | Join OrgSync
+
   #container
-    You are amazing
+    // Logos
+    div.grid-container.grid-2
+      div.grid-item
+        h3 What is NUVR?
+        p The beautiful world of virtual and augmented reality is desperate for developers and engineers. Northeastern University Virtual Reality, or NUVR, is where students from all over campus can come together to research and develop with the newest technologies. Our mission is to provide students and the community at large with a space to explore.
+      div.grid-item
+        img
+      div.grid-item
+        img
+      div.grid-item
+        h3 Where do we meet?
+        p We meet weekly on Thursdays at 7PM. Our current meeting space is the Discovery Lab in Snell Library. That’s on the first floor corner next to Argo Tea. If you join our mailing list, you can stay up to date with all alerts and news related to the club.
+        a(href="#")
+          button.btn
+            | Join OrgSync
