--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -2,6 +2,8 @@ $font-stack: Helvetica, sans-serif
 $primary-color: #333
 
 @import normalize
+@import layout
+@import buttons
 
 body
   font: 100% $font-stack
