--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,15 +1,23 @@
 // Colors
+$white: #ffffff
 $dark-gray: #222222
 $light-gray: #333333
 $gradient-start: #f10001
 $gradient-end: #7f044c
 
-$linear-gradient: linear-gradient(130deg, $gradient-start 0%, $gradient-end 100%);
+$gradient-deg: 130deg
 $overlay-opacity: 0.8
-$linear-gradient-overlay: linear-gradient(130deg, rgba($gradient-start, 0.95) 0%, rgba($gradient-end, $overlay-opacity) 100%);
+$linear-gradient: linear-gradient($gradient-deg, $gradient-start 0%, $gradient-end 100%);
+$webkit-linear-gradient: -webkit-linear-gradient($gradient-deg, $gradient-start, $gradient-end)
+$linear-gradient-overlay: linear-gradient($gradient-deg, rgba($gradient-start, 0.95) 0%, rgba($gradient-end, $overlay-opacity) 100%);
 
 // Layout
 $content-width: 1320px
+
+// Buttons
+$border-width: 2px
+$padding: 12px
+$padding-large: 18px
 
 // Other
 $background-url: '../assets/img/bg.jpg'
