--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -1,10 +1,10 @@
 @import variables
 
 .btn
-  padding: 12px
+  padding: $padding
   font-weight: bold
   background: $linear-gradient
-  color: #ffffff
+  color: $white
   border: none
   transform: perspective(1px) translateZ(0)
   transition-duration: $animation-time
@@ -19,9 +19,31 @@
     text-decoration: none
 
   &.btn-large
-    padding: 18px
+    padding: $padding-large
+
+    &.btn-outline
+      padding: #{$padding-large - $border-width}
 
   &.btn-outline
+    padding: #{$padding - $border-width}
     color: $dark-gray
-    border: 2px solid $dark-gray
+    border: $border-width solid $dark-gray
     background: rgba(255, 255, 255, 0)
+
+  &.btn-white
+    background: $white
+
+    span
+      background: $webkit-linear-gradient
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+
+    &.btn-outline
+      background: none
+      border: $border-width solid $white
+
+      span
+        background: none
+        -webkit-background-clip: inherit
+        -webkit-text-fill-color: inherit
+        color: $white
