--- a/src/views/layouts/home.jade
+++ b/src/views/layouts/home.jade
@@ -5,10 +5,10 @@
 
     a(href="#")
       button.btn.btn-large.btn-white
-        | Join Mailing List
+        span Join Mailing List
     a(href="#")
       button.btn.btn-large.btn-white.btn-outline
-        | Join OrgSync
+        span Join OrgSync
 
 #container.content
   // Logos
@@ -25,4 +25,4 @@
       p We meet weekly on Thursdays at 7PM. Our current meeting space is the Discovery Lab in Snell Library. That’s on the first floor corner next to Argo Tea. If you join our mailing list, you can stay up to date with all alerts and news related to the club.
       a(href="#")
         button.btn
-          | Join OrgSync
+          span Join OrgSync
