--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -2,6 +2,7 @@
 $white: #ffffff
 $dark-gray: #222222
 $light-gray: #333333
+$background: #eeeeee
 $gradient-start: #f10001
 $gradient-end: #7f044c
 
@@ -13,6 +14,7 @@ $linear-gradient-overlay: linear-gradient($gradient-deg, rgba($gradient-start, 0
 
 // Layout
 $content-width: 1320px
+$container-overlap: 120px
 
 // Buttons
 $border-width: 2px
