--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -6,7 +6,11 @@
   z-index: 0
   background: $linear-gradient-overlay, url($background-url) no-repeat center center
   background-size: cover
+  padding-top: $nav-height
   padding-bottom: $container-overlap
+
+  .content
+    height: 100%
 
 
 #container
