--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -14,6 +14,7 @@ $linear-gradient-overlay: linear-gradient($gradient-deg, rgba($gradient-start, 0
 
 // Layout
 $content-width: 1320px
+$nav-height: 120px
 $container-overlap: 120px
 
 // Buttons
