--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -16,11 +16,12 @@ $linear-gradient-overlay: linear-gradient($gradient-deg, rgba($gradient-start, 0
 $content-width: 1320px
 $nav-height: 120px
 $container-overlap: 120px
+$container-padding: 16px
 
 // Buttons
-$border-width: 2px
-$padding: 12px
-$padding-large: 18px
+$button-border-width: 2px
+$button-padding: 12px
+$button-padding-large: 18px
 
 // Other
 $background-url: '../assets/img/bg.jpg'
