--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -2,7 +2,6 @@
 
 #header
   color: #ffffff
-  height: 50vh
   z-index: 0
   background: $linear-gradient-overlay, url($background-url) no-repeat center center
   background-size: cover
@@ -12,6 +11,9 @@
   .content
     height: 100%
 
+    &.home
+      padding: 40px $container-padding
+
 
 #container
   background: $white
@@ -19,7 +21,7 @@
 
 .content
   width: $content-width
-  padding: 16px
+  padding: $container-padding
   margin: 0 auto
 
 .grid-container
@@ -29,4 +31,4 @@
     grid-template-columns: auto auto
 
   .grid-item
-    padding: 16px
+    padding: $container-padding
