--- a/src/views/layouts/home.jade
+++ b/src/views/layouts/home.jade
@@ -1,5 +1,5 @@
 #header
-  .content
+  .content.home
     h1 Northeastern Virtual Reality
     h4 Whether you're a developer, a designer, or just an individual looking to try out VR for the first time, we welcome everyone. Come visit us in the Discovery Lab or join our mailing list below.
 
