Add Segoe fonts

--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -20,7 +20,7 @@
   margin-top: -$container-overlap
 
 .content
-  width: $content-width
+  max-width: $content-width
   padding: $container-padding
   margin: 0 auto
 
