--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -1,5 +1,56 @@
 @import variables
 
+#navbar
+  width: 100%
+  height: $nav-height
+  position: absolute
+
+  .flex-container
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+    .logo
+      fill: $white
+      max-height: 100%
+
+      svg
+        height: 80px
+
+    .links
+      display: flex
+      align-items: center
+      color: $white
+
+      .link
+        cursor: pointer
+        margin: 20px
+        position: relative
+
+        &:hover::before
+          right: 0
+
+        &::before
+          content: ""
+          position: absolute
+          background: $white
+          left: 0
+          bottom: -6px
+          right: 100%
+          height: 4px
+          transition: all .25s
+          transition-timing-function: cubic-bezier(0.13, 1, 0.98, 0.98)
+          overflow: hidden
+
+          &:hover
+            right: 0
+
+        &.active
+          font-weight: bold
+
+          &::before
+            right: 0
+
 #header
   color: #ffffff
   z-index: 0
