--- a/src/views/layouts/home.jade
+++ b/src/views/layouts/home.jade
@@ -1,7 +1,7 @@
 #header
   .content.home
-    h1 Northeastern Virtual Reality
-    h4 Whether you're a developer, a designer, or just an individual looking to try out VR for the first time, we welcome everyone. Come visit us in the Discovery Lab or join our mailing list below.
+    h1.title Northeastern Virtual Reality
+    h4.subtitle Whether you're a developer, a designer, or just an individual looking to try out VR for the first time, we welcome everyone. Come visit us in the Discovery Lab or join our mailing list below.
 
     a(href="#")
       button.btn.btn-large.btn-white
@@ -26,3 +26,6 @@
       a(href="#")
         button.btn
           span Join OrgSync
+
+script(type='text/javascript').
+  setActivePage('home')
