--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -11,6 +11,14 @@ body
   color: $primary-color
   background: $background
 
+.title
+  font-size: 84px
+  margin-bottom: 0
+
+.subtitle
+  font-weight: normal
+  font-size: 24px
+
 p
   line-height: 1.5
 
